# litterkicker

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
docker/: Dockerfile  build  push
litterkicker/: kicker.py
terraform/: main.tf
tests/: test_kicker.py
