[tool.poetry]
name = "litterkicker"
version = "0.2.0"
description = "Automation tool for the LitterRobot 3"
authors = ["Chad Bowman <chad.bowman0+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylitterbot = "^2023.4.3"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
